@@ -1,5 +1,11 @@
 2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>
 
+	* config/obj-elf.c (obj_elf_change_section): Update
+	elf_section_type and elf_section_flags only when they are
+	specified.
+
+2003-07-25  H.J. Lu  <hongjiu.lu@intel.com>
+
 	* config/obj-elf.c (obj_elf_change_section): Always set section
 	type and flags.
 
